8026385: [macosx] (awt) setjmp/longjmp changes the process signal mask on OS X

Use _setjmp/_longjmp instead

Reviewed-by: prr, anthony